Make sure onFocusChanged is correctly emitted for items in a FocusScope.

Task-number: QTBUG-12649
Reviewed-by: Martin Jones